# go-delta-rs

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  install.sh
.github/workflows/: ci.yml  release.yml
cmd/maintenance/: main.go
cmd/setup/: main.go
delta-server/: Cargo.toml  build.rs
delta-server/src/: main.rs  service.rs
deltago/: client.go  deltago_test.go  doc.go  download.go  integration_test.go  sidecar.go  types.go
example/: main.go
proto/: delta.proto
