[package]
name = "delta-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "delta-server"
path = "src/main.rs"

[dependencies]
deltalake = { version = "0.22", features = ["datafusion"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "53", features = ["json"] }
arrow-json = "53"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
